rbx_binary/src/weak/tests/snapshots/rbx_binary__weak__tests__util__funny-numbervalue__decoded.snap
---
source: rbx_binary/src/weak/tests/util.rs
expression: decoded_viewed
---
- referent: referent-0
  name: Value
  class: NumberValue
  properties:
    Attributes:
      Attributes: {}
    Tags:
      Tags: []
    Value:
      Float64: 1.23456
  children: []
